--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -22,7 +22,7 @@ body {
 header {
     grid-area: header;
     display: flex;
-    height: 90px;
+    height: 120px;
     background-color: rgb(197, 109, 16);
     align-items: center;
     justify-content: space-between;
@@ -43,7 +43,7 @@ main {
 h1 a {
     text-decoration: none;
     color: rgb(8, 8, 8);
-    font-family: 'Permanent Marker', cursive;
+    font-family: 
     text-align: none;
     font-size: 2rem;
 }
@@ -118,22 +118,6 @@ p {
     width: 50%;
 }
 
-/* PAGINA DE ADOPCION */
-.perrosAdopcion {
-    display: flex;
-    flex-direction: column;  
-
-} 
-.perrosAdopcion img:hover{
-    height: 300px;
-    width: 400px;
-}
-
-article {
-    display: flex;
-    flex-direction: row;
-}
-
 /* PAGINA DE NOSOTROS */
 .imagen3  {
     width: 100%;
@@ -156,6 +140,7 @@ article {
     font-size: 25px;
     margin: 50px 40px 60px 80px;
 }
+
 
 /* PAGINA DE PREGUNTAS FRECUENTES */
 
@@ -189,19 +174,6 @@ article {
     border-color: rgb(197, 109, 16);
 }
 
-form .col-12{
-
-    text-align: center;    
-}
-
-form .col-md-6 {
-
-        width: 300px;
-}
-
-.row {
-margin-right: 0;
-}
 /* PIE DE PAGINA */
 
 footer {
@@ -260,7 +232,6 @@ footer {
     }
 
     .menuPrincipal ul {
-
         display: flex;
         flex-direction: column;
     }
