--- a/scss/utilities/_mediaqueries.scss
+++ b/scss/utilities/_mediaqueries.scss
@@ -41,9 +41,11 @@
 
     }
 
-    #navbarSupportedContent ul {
-        display: flex;
-        flex-direction: column;
+    #navbarSupportedContent {
+        ul{
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     .textoPrincipal {
