--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -1,13 +1,5 @@
 body {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.1fr 1fr 0.1fr;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer";
+    @include gridBase;
     width: 100%;
     height: 100vh;
-
-
 }
