--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -3,32 +3,16 @@
 }
 
 .tituloTexto {
-    text-align: center;
-    font-size: 2rem;
-    margin-top: 40px;
-    font-weight: 700;
+    @extend .tituloTexto;
 
 }
 
 .textoPrincipal {
-    font-size: 1.5rem;
-    font-family: $textoIndex;
-    margin-top: 50px;
-    margin-right: 40px;
-    margin-bottom: 60px;
-    margin-left: 80px;
-    text-align: justify;
-    background-color: $fondoTextoRespuestas;
-    padding: 15px;
-    border-radius: 10px;
-    line-height: $interLineado;
+    @extend .textoPrincipal;
 }
 
 .tituloVideo {
-    font-size: 2rem;
-    font-weight: 700;
-    text-align: center;
-
+    @extend .tituloTexto;
 }
 
 .video1 {
