--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -11,8 +11,8 @@ header {
         display: flex;
 
         img {
-
-            height: 50px;
+            margin-left: 50px;
+            height: 125px;
         }
 
 
