--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -1,15 +1,14 @@
 $colorHeader:  rgb(197, 109, 16);
-$TipoLetraHeader: 'Permanent Marker', cursive;
 $colorLetrasHeader: black;
 $hover: white;
 $tipoLetraMenu: Verdana, Geneva, Tahoma, sans-serif;
 
-$textoIndex: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+$textoIndex: 'roboto';
 $fondoTextoIndex:antiquewhite;
 
 $interLineado: line-height 1.6;
 
-$textoRespuestas:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+$textoRespuestas:'roboto';
 $fondoTextoRespuestas:antiquewhite;
 
 $colorFondoNosotro: black;
