--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -1,3 +1,7 @@
+.mainContacto{
+    background-image: url(/multimedia/pexels-alina-vilchenko-5643798.jpg);
+    background-size: cover;
+}
 .btn-primary{
     @include botonesContacto;
 }
