--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,4 +3,7 @@ footer {
     text-align: map-get($estilo , alineacion);
     background-color: map-get($estilo, color);
     font-size: map-get($estilo, grosor );
+    .redes{
+        margin-top: 20px;
+    }
 }
