--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,61 +1,21 @@
 header {
-
-    grid-area: header;
-    display: flex;
-    height: 120px;
+    text-align: center;
     background-color: $colorHeader;
-    align-items: center;
-    justify-content: space-between;
-
-    .logo {
+    
+      
+    .row {
         display: flex;
-
-        img {
-            margin-left: 50px;
-            height: 125px;
-        }
-
-
-        h1 {
-            font-family: $TipoLetraHeader;
-            font-size: 2rem;
-
-            a {
-                text-decoration: none;
-                text-align: none;
-                color: $colorLetrasHeader;
-                &:hover {
-                    color: $hover
-            }
-        }
-
-
-    }
-}
-
-.menuPrincipal {
-    ul {
-        display: flex;
-        flex-direction: row;
-        list-style: none;
-        position: relative;
         
-        li {
-            font-weight: 600;
-            padding: 10px;
-            
-            a {
-                text-decoration: none;
-                font-family: $tipoLetraMenu;
-                color: $colorLetrasHeader;
-                font-size: 1rem;
-                &:hover{
-                    color: $hover;
-                    }
-            }
+        img {
+            height: 100px;
         }
+        
     }
 }
-}
-
-
+.navbar-nav{
+        justify-content: space-between;
+        font-weight: 600;
+        font-size: 1rem;
+        font-family: $tipoLetraMenu;
+    }
+    
