--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -32,7 +32,7 @@ $estilo:  (
     
 .textoPrincipal {
         font-size: 1.5rem;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        font-family: 'Arial Narrow', Arial, sans-serif;
         margin-top: 50px;
         margin-right: 40px;
         margin-bottom: 60px;
