--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,21 +1,24 @@
 header {
     text-align: center;
     background-color: $colorHeader;
-    
-      
     .row {
         display: flex;
-        
         img {
             height: 100px;
         }
-        
     }
 }
-.navbar-nav{
+.navbar {
+    .navbar-nav {
         justify-content: space-between;
         font-weight: 600;
         font-size: 1rem;
         font-family: $tipoLetraMenu;
+        .nav-link:hover {
+            color: white;
+            background-color: black;
+            border-radius: 10%;
+            transition: all 1.5s;
+        }
     }
-    
+}
