--- a/scss/utilities/_mediaqueries.scss
+++ b/scss/utilities/_mediaqueries.scss
@@ -1,44 +1,40 @@
 @media screen and (max-width : 768px) {
+   
     header {
         display: flex;
         flex-direction: column;
-        justify-content: center;
-            
+        justify-content: center;            
             img{
                 margin-top: 20px;
-                height: 80px;
+                height: 60px;
             }
         }       
+    } 
+    .navbar .navbar-nav{
+        font-size: 0.9rem;
     }    
     .textoPrincipal{
         margin-left: 5%;
+        font-size: 1rem;
     }    
     .video1 iframe {
         width: 100%;
     }
-@media screen and (max-width: 500px) {
-    
+@media screen and (max-width: 500px) {    
     .textoPrincipal {
         margin-left: 10%;
         margin-right: 10%;
-        font-size: 1rem;    
+        font-size: 1.3rem;    
         text-align: justify;
         border-radius: 10px;
     }    
-    .textoNosotro{
-        text-align: justify;
-    
+    .textoNosotros{
+        .textoNosotros1{
+        text-align:justify;
+        margin: 80px 30px 80px 30px ;
+       }       
+    }    
+    .video1 {
+        width: 80%;
     }
-    article {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-
-    }
-    .video1 iframe {
-        align-items: flex-start;
-        width: 100%;
-    }
-
-
 }
