--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -9,7 +9,10 @@
     @extend .tituloTexto;
 }
 .video1 {
-    margin-left: 10%;
-    margin-bottom: 5%;
+    margin: 30px;
+    text-align: center;
+}
+.video1 iframe{
     width: 80%;
+    border-radius: 20px;
 }
