--- a/scss/utilities/_mediaqueries.scss
+++ b/scss/utilities/_mediaqueries.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width : 768px) {   
+@media only screen and (max-width: 768px) and (min-width: 300px) {   
     header {
         display: flex;
         flex-direction: column;
@@ -17,24 +17,24 @@
         margin-left: 50px;
         margin-right: 50px;
     }
-    .video1 iframe {
-        width: 100%;
+
+    
+    @media screen and (max-width: 500px) {    
+        .textoPrincipal {
+            margin-left: 10%;
+            margin-right: 10%;
+            font-size: 1.3rem;    
+            text-align: justify;
+            border-radius: 10px;
+        }    
+        .textoNosotros{
+            .textoNosotros1{
+                text-align:justify;
+                margin: 80px 30px 80px 30px ;
+            }       
+        }  
+        
+        .video1 iframe{
+            width: 100%;
+        }
     }
-@media screen and (max-width: 500px) {    
-    .textoPrincipal {
-        margin-left: 10%;
-        margin-right: 10%;
-        font-size: 1.3rem;    
-        text-align: justify;
-        border-radius: 10px;
-    }    
-    .textoNosotros{
-        .textoNosotros1{
-        text-align:justify;
-        margin: 80px 30px 80px 30px ;
-       }       
-    }    
-    .video1 {
-        width: 80%;
-    }
-}
