--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,9 +1,7 @@
 $estilo:  (
  color: rgb(197, 109, 16),
  alineacion: center,
- grosor: 0.9,
-);
-
+ grosor: 0.9,);
 @mixin gridBase {
     display: grid;
     grid-template-columns: 1fr;
@@ -15,21 +13,18 @@ $estilo:  (
 
     
 }
-
 @mixin botonesContacto {
     background-color: black;
     border-color: rgb(197, 109, 16);
     
 }
-
 .tituloTexto {
         text-align: center;
         font-size: 2rem;
         margin-top: 40px;
         font-weight: 700;
     
-    }
-    
+    }    
 .textoPrincipal {
         font-size: 1.5rem;
         font-family: 'Arial Narrow', Arial, sans-serif;
