--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -14,10 +14,30 @@ header {
         font-weight: 600;
         font-size: 1rem;
         font-family: $tipoLetraMenu;
+        .nav-link{    
+            border-radius: 40px;    
+            transition: transform 0.3s ease, box-shadow 0.3s ease;    
+            overflow: hidden;
+        }        
+        .nav-link::after{    
+            width: 400px;
+            height: 400px;
+            position: absolute;
+            top: -50px;
+            left: -100px;
+            z-index: -1;
+            transition: transform 0.5s ease;
+        }
+        .nav-link:hover{
+            transform: translate(0, -6px);
+            box-shadow: 10px -10px 25px 0 rgba(253, 250, 250, 0.5), -10px 10px 25px 0 rgb(77, 76, 76);
+        }        
+        .nav-link:hover::after{
+            transform: rotate(150deg);
+        }
         .nav-link:hover {
             color: white;
             background-color: black;
-            border-radius: 10%;
             transition: all 1.5s;
         }
     }
